--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13"
   },
   "devDependencies": {
