feat: rnn done as well

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -34,3 +34,5 @@ backend/models/*.npy
 frontend/package-lock.json
 frontend/yarn.lock
 frontend/pnpm-lock.yaml
+backend/preprocessed/*
+backend/trained_models/*
