--- a/src/.gitignore
+++ b/src/.gitignore
@@ -31,6 +31,7 @@ backend/__pycache__/
 backend/models/__pycache__/
 backend/models/*.npz
 backend/models/*.npy
+backend/submissions/results/*.csv
 frontend/package-lock.json
 frontend/yarn.lock
 frontend/pnpm-lock.yaml
